--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
