--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
@@ -36,6 +37,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.445.0",
     "next": "14.2.13",
+    "next-seo": "^6.6.0",
     "prisma": "^5.19.1",
     "react": "^18",
     "react-day-picker": "8.10.1",
