--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.5.6",
     "jsonwebtoken": "^9.0.2",
