feat: settings update + renovate

--- a/package.json
+++ b/package.json
@@ -1,65 +1,28 @@
 {
-  "name": "pet-care",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@pc/root",
+  "version": "0.0.0",
+  "description": "Root directory for PetCare Portal",
+  "keywords": [
+    "petcare",
+    "portal",
+    "root"
+  ],
+  "author": "idkgene",
+  "license": "MIT",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "build": "turbo run build",
+    "test": "turbo run test",
+    "dev": "turbo run dev",
+    "clean": "turbo run clean",
+    "lint": "turbo run lint",
+    "format": "turbo run format"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
-    "@prisma/client": "^5.19.1",
-    "@radix-ui/react-accordion": "^1.2.0",
-    "@radix-ui/react-alert-dialog": "^1.1.1",
-    "@radix-ui/react-avatar": "^1.1.0",
-    "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.1.1",
-    "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-scroll-area": "^1.1.0",
-    "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slider": "^1.2.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.2",
-    "@radix-ui/react-tooltip": "^1.1.2",
-    "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.7",
-    "bcrypt": "^5.1.1",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "cmdk": "1.0.0",
-    "date-fns": "^4.1.0",
-    "framer-motion": "^11.5.6",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.445.0",
-    "next": "14.2.13",
-    "next-seo": "^6.6.0",
-    "prisma": "^5.19.1",
-    "react": "^18",
-    "react-day-picker": "8.10.1",
-    "react-dom": "^18",
-    "react-hook-form": "^7.53.0",
-    "react-leaflet": "^4.2.1",
-    "sharp": "^0.33.5",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "@pc/eslint": "workspace:*",
+    "@pc/prettier": "workspace:*",
+    "@pc/lintstaged": "workspace:*",
+    "@pc/commitlint": "workspace:*",
+    "turbo": "^2.3.3"
   },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+  "packageManager": "pnpm@9.15.2"
 }
