feat(eslint): eslint package presented + new file format for stylelint

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@pc/prettier": "workspace:*",
     "@pc/lintstaged": "workspace:*",
     "@pc/commitlint": "workspace:*",
+    "@pc/stylelint": "workspace:*",
     "turbo": "^2.3.3"
   },
   "packageManager": "pnpm@9.15.2"
