--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -1,7 +1,8 @@
 {
-  "extends": "@pc/tsconfig/tsconfig.react-library.json",
+  "extends": "@pc/tsconfig/react-library.json",
   "compilerOptions": {
-    "baseUrl": "."
+    "baseUrl": ".",
+    "jsx": "preserve"
   },
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
