--- a/packages/design-system/tsconfig.json
+++ b/packages/design-system/tsconfig.json
@@ -1,8 +1,11 @@
 {
-  "extends": "@pc/tsconfig/tsconfig.react-library.json",
+  "extends": "@pc/tsconfig/react-library",
   "compilerOptions": {
     "baseUrl": ".",
     "jsx": "react-jsx",
+    "esModuleInterop": true,
+    "strict": true,
+    "skipLibCheck": true,
     "plugins": [
       {
         "name": "next"
@@ -10,7 +13,7 @@
     ],
     "paths": {
       "@pc/*": ["../*"],
-      "@pc/design-system/*": ["./*"]
+      "@pc/ui/*": ["./*"]
     }
   },
   "include": ["**/*.ts", "**/*.tsx"],
