feat: some path fixes + more stuff

--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@pc/tsconfig/tsconfig.react-library.json",
+  "extends": "@pc/tsconfig/react-library.json",
   "compilerOptions": {
     "baseUrl": "."
   },
