--- a/packages/seo/tsconfig.json
+++ b/packages/seo/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@pc/tsconfig/tsconfig.react-library.json",
+  "extends": "@pc/tsconfig/react-library",
   "compilerOptions": {
     "baseUrl": "."
   },
