--- a/tooling/commitlint-config/package.json
+++ b/tooling/commitlint-config/package.json
@@ -3,20 +3,24 @@
   "version": "0.0.0",
   "private": true,
   "description": "Shared Commitlint configuration for ReactUse",
+  "keywords": [
+    "commitlint",
+    "config",
+    "petcare"
+  ],
+  "homepage": "https://github.com/idkgene/petcare#readme",
+  "bugs": {
+    "url": "https://github.com/idkgene/petcare/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/idkgene/petcare"
+  },
+  "license": "MIT",
   "author": {
     "name": "Gene",
     "url": "https://github.com/idkgene"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/idkgene/reactuse"
-  },
-  "keywords": [
-    "commitlint",
-    "commitlintconfig",
-    "react",
-    "reactuse"
-  ],
   "peerDependencies": {
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
