--- a/tooling/lintstaged-config/package.json
+++ b/tooling/lintstaged-config/package.json
@@ -2,21 +2,25 @@
   "name": "@pc/lintstaged",
   "version": "0.0.0",
   "private": true,
-  "description": "Shared lint-staged configuration for ReactUse",
-  "author": {
-    "name": "Gene",
-    "url": "https://github.com/changeelog"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/idkgene/reactuse"
-  },
+  "description": "Shared lint-staged configuration for monorepo",
   "keywords": [
     "lint-staged",
     "git hooks",
-    "pre-commit",
-    "hooklab"
+    "pre-commit"
   ],
+  "homepage": "https://github.com/idkgene/petcare#readme",
+  "bugs": {
+    "url": "https://github.com/idkgene/petcare/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/idkgene/petcare"
+  },
+  "license": "MIT",
+  "author": {
+    "name": "Gene",
+    "url": "https://github.com/idkgene"
+  },
   "peerDependencies": {
     "lint-staged": "^15.2.10"
   }
