fix: make VS Code workspace settings eslint 9 working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,35 +1,18 @@
 {
-  "[javascript]": {
-    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
-  },
-  "[json]": {
-    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
-  },
-  "[jsonc]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[typescript]": {
-    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
-  },
-  "[typescriptreact]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-
-  "editor.defaultFormatter": "dbaeumer.vscode-eslint",
-  "editor.formatOnPaste": true,
   "typescript.tsdk": "node_modules/typescript/lib",
+  
+  "prettier.enable": false,
+  "editor.formatOnSave": false,
 
+  // Auto fix
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit",
     "source.organizeImports": "never"
   },
 
-  "eslint.options": {
-    "flags": ["unstable_ts_config"]
-  },
-
   "eslint.runtime": "node",
 
+  // Silent the stylistic rules in you IDE, but still auto fix them
   "eslint.rules.customizations": [
     { "rule": "style/*", "severity": "off", "fixable": true },
     { "rule": "*-indent", "severity": "off", "fixable": true },
@@ -42,6 +25,7 @@
     { "rule": "*semi", "severity": "off", "fixable": true }
   ],
 
+  // Enable eslint for all supported languages
   "eslint.validate": [
     "javascript",
     "javascriptreact",
@@ -56,5 +40,5 @@
     "yaml",
     "toml",
     "xml"
-  ],
+  ]
 }
