--- a/package.json
+++ b/package.json
@@ -1,29 +1,137 @@
 {
-  "name": "@pc/root",
+  "name": "pawfect",
   "version": "0.0.0",
-  "description": "Root directory for PetCare Portal",
+  "packageManager": "pnpm@9.15.4",
+  "description": "Root directory for Pawfect",
+  "author": "outslept",
+  "license": "MIT",
   "keywords": [
-    "petcare",
+    "Pawfect",
     "portal",
     "root"
   ],
-  "author": "idkgene",
-  "license": "MIT",
   "scripts": {
-    "build": "turbo run build",
-    "test": "turbo run test",
-    "dev": "turbo run dev",
-    "clean": "turbo run clean",
-    "lint": "turbo run lint",
-    "format": "turbo run format"
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "drizzle:migrate:dev": "drizzle-kit migrate --config=drizzle-dev.config.ts",
+    "drizzle:generate:dev": "drizzle-kit generate --config=drizzle-dev.config.ts",
+    "drizzle:migrate:prod": "drizzle-kit migrate --config=drizzle-prod.config.ts",
+    "drizzle:generate:prod": "drizzle-kit generate --config=drizzle-prod.config.ts"
   },
   "dependencies": {
-    "@pc/commitlint": "workspace:*",
-    "@pc/eslint": "workspace:*",
-    "@pc/lintstaged": "workspace:*",
-    "@pc/prettier": "workspace:*",
-    "@pc/stylelint": "workspace:*",
-    "turbo": "^2.3.3"
+    "@hookform/resolvers": "^3.10.0",
+    "@libsql/client": "^0.14.0",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.5",
+    "@radix-ui/react-aspect-ratio": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-context-menu": "^2.2.5",
+    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-hover-card": "^1.1.5",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-menubar": "^1.1.5",
+    "@radix-ui/react-navigation-menu": "^1.2.4",
+    "@radix-ui/react-popover": "^1.1.5",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-radio-group": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.5",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slider": "^1.2.2",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.5",
+    "@radix-ui/react-toggle": "^1.1.1",
+    "@radix-ui/react-toggle-group": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.7",
+    "@t3-oss/env-nextjs": "^0.12.0",
+    "@types/bcrypt": "^5.0.2",
+    "analytics": "github:vercel/analytics",
+    "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
+    "concurrently": "^9.1.2",
+    "cross-env": "^7.0.3",
+    "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.39.1",
+    "drizzle-zod": "^0.7.0",
+    "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.0.6",
+    "input-otp": "^1.4.2",
+    "libphonenumber-js": "^1.11.19",
+    "lucide-react": "^0.474.0",
+    "next": "^15.1.6",
+    "next-i18next": "^15.4.1",
+    "next-seo": "^6.6.0",
+    "next-themes": "^0.4.4",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
+    "pino-roll": "^3.0.0",
+    "random-seed": "^0.3.0",
+    "rate-limiter-flexible": "^5.0.5",
+    "react": "^19.0.0",
+    "react-day-picker": "8.10.1",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-resizable-panels": "^2.1.7",
+    "recharts": "^2.15.1",
+    "resend": "^4.1.2",
+    "sonner": "^1.7.3",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
+    "wait-port": "^1.1.0",
+    "zod": "^3.24.1"
   },
-  "packageManager": "pnpm@9.15.2"
+  "devDependencies": {
+    "@antfu/eslint-config": "^4.1.0",
+    "@ast-grep/cli": "^0.34.4",
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
+    "@commitlint/types": "^19.5.0",
+    "@eslint-react/eslint-plugin": "^1.24.1",
+    "@types/node": "^22.12.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "drizzle-kit": "^0.30.4",
+    "eslint": "^9.19.0",
+    "eslint-plugin-format": "^1.0.1",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.18",
+    "lint-staged": "^15.4.3",
+    "simple-git-hooks": "^2.11.1",
+    "tailwindcss": "^3.4.16",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.3"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ],
+    "rules": {
+      "header-max-length": [
+        2,
+        "always",
+        100
+      ],
+      "scope-enum": [
+        2,
+        "always",
+        [
+          "core",
+          "utils",
+          "types",
+          "docs"
+        ]
+      ]
+    }
+  }
 }
